# bey-examples

./: .gitmodules  README.md
bey-livekit-agent/: README.md  main.py  pyproject.toml
call-api/: .gitignore  README.md  demo.ts  index.html  package-lock.json  package.json  styles.css  tsconfig.json
call-events-webhook/: README.md
call-events-webhook/cloud-run-functions/: main.py
custom-llm/: .env.template  README.md  create_agent.py  create_openai_compatible_llm_api.py  deploy-tgi-cloud-run
custom-llm/tgi-docker/: Dockerfile  download_repo
e2e-agent/: README.md  create.py  fetch_calls.py  pyproject.toml
livekit-agent/: .customize-your-agent.md  .env.template  .gitignore  .hackathon-quickstart.md  README.md  main.js  main.py  package.json  pyproject.toml  requirements.txt
livekit-agent-js/: .gitignore  README.md  env.example  package.json  tsconfig.json
livekit-agent-js/plugin-bey/: package.json
livekit-agent-js/src/: index.ts  stt-llm-tts.ts  tool-calling.ts
livekit-agent/.client/: package-lock.json  package.json
livekit-agent/.client/app/: Chat.tsx  MyVideoConference.tsx  page.tsx
livekit-agent/.client/app/api/connection-details/: route.ts
managed-agent-livekit-call-api/: .gitignore  README.md  demo.ts  index.html  package.json  styles.css  tsconfig.json
pipecat-bot/: .env.template  README.md  main.py  requirements.txt
pipecat-example/: .env.template  README.md  bey_video.py  integration_code.py  main.py  requirements.txt
videosdk-agent/: .env.template  README.md  integration_code.py  main.py  requirements.txt
