[project]
name = "bey-e2e-agent"
version = "0.1.0"
description = "Minimal end-to-end interview avatar agent using the Beyond Presence API"
authors = [{ name = "Beyond Presence GmbH", email = "info@beyondpresence.ai" }]
requires-python = "~= 3.8"
dependencies = [
    "python-dotenv ~= 1.0",
    "requests ~= 2.0",
]
