[project]
name = "bey-livekit-agent"
version = "0.1.0"
description = "Minimal avatar agent using the Beyond Presence API"
authors = [{ name = "Beyond Presence GmbH", email = "info@beyondpresence.ai" }]
requires-python = "~= 3.9"
dependencies = [
    "livekit-agents == 1.0.13",
    "livekit-plugins-bey @ git+https://github.com/livekit/agents.git@cc0e17a8c9f263622660ed57de146304835b2742#subdirectory=livekit-plugins/livekit-plugins-bey",
    "livekit-plugins-openai == 1.0.13",
    "python-dotenv ~= 1.0",
]
