[project]
name = "bey-livekit-agent"
version = "0.1.0"
description = "Minimal avatar agent using the Beyond Presence API"
authors = [{ name = "Beyond Presence GmbH", email = "info@beyondpresence.ai" }]
requires-python = "~= 3.9"
dependencies = [
    "livekit-agents == 1.0.16",
    "livekit-plugins-bey == 1.0.16",
    "livekit-plugins-openai == 1.0.16",
    "python-dotenv ~= 1.0",
]
